WI 707999 Fix sonar code maintainability issues